# game_life

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  life.cpp
app/client/: CMakeLists.txt  client.cpp  client.h  i_execute.h  i_request.h
app/console_process_classes/: console_input_processor.cpp  console_input_processor.h  console_output_compiler.cpp  console_output_compiler.h  i_input_processor.h  i_output_compiler.h
app/game_space_classes/: CMakeLists.txt  field.cpp  field.h  universe.cpp  universe.h
app/utils/: exceptions.cpp  exceptions.h  game_commands.h  i_suggestion.h  parse_answer_struct.h  suggestions.cpp  suggestions.h
app/workers/: CMakeLists.txt  file_handler.cpp  file_handler.h  helper.cpp  helper.h  i_initialize_info.h  i_save_info.h  iterator.cpp  iterator.h  statistics.cpp  statistics.h
game_files/: example.life  input_test_#Life.life  input_test_#N.life  input_test_#R.life  input_test_birth_rule.life  input_test_double_coordinates.life  input_test_incorrect_coordinates.life  input_test_survive_rule.life
tests/: console_input_processor_tests.cpp  field_tests.cpp  file_handler_tests.cpp  iterator_tests.cpp  universe_tests.cpp
